--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <button class="button" id="add-recipe" type="button" name="button">Click here to add a recipe</button>
         <span id="or"> or </span>
         <button class="button" id="filter-button" type="button" name="button">Get a random recipe by ingredient</button>
-        <span id="or"> or </span>
-        <button class="button" id="sort-button" type="button" name="button">Sort recipe</button>
+        <!-- <span id="or"> or </span>
+        <button class="button" id="sort-button" type="button" name="button">Sort recipe</button> -->
       </div>
       <div id="filter-drop-down" class="hidden">
         <h3>Get a random recipe:</h3>
